Incrementing package version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.3) bullseye jammy; urgency=low
+
+  * Added experimental CW decoder.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 28 Jan 2028 16:12:00 +0000
+
 pycsdr (0.18.2) bullseye jammy; urgency=low
 
   * Added noise filtering based on spectral subtraction
