Preparing for the release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.5) bullseye jammy; urgency=low
+
+  * Added SSTV decoder.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 18 Feb 2023 16:12:00 +0000
+
 pycsdr (0.18.4) bullseye jammy; urgency=low
 
   * Added RTTY decoder.
