--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.7) bullseye jammy; urgency=low
+
+  * Added debug time parameter to the SSTV decoder module.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 11 Mar 2023 16:12:00 +0000
+
 pycsdr (0.18.6) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.6.
