--- a/debian/changelog
+++ b/debian/changelog
@@ -1,26 +1,32 @@
+pycsdr (0.18.9) bullseye jammy; urgency=low
+
+  * Added automatic frequency control (AFC) module.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 29 Apr 2023 16:12:00 +0000
+
 pycsdr (0.18.8) bullseye jammy; urgency=low
 
   * Added FAX decoder.
 
- -- Marat Fayzullin <luarvique@gmail.com>  Sat, 22 Mar 2023 16:12:00 +0000
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 22 Apr 2023 16:12:00 +0000
 
 pycsdr (0.18.7) bullseye jammy; urgency=low
 
   * Added debug time parameter to the SSTV decoder module.
 
- -- Marat Fayzullin <luarvique@gmail.com>  Sat, 11 Mar 2023 16:12:00 +0000
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 11 Apr 2023 16:12:00 +0000
 
 pycsdr (0.18.6) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.6.
 
- -- Marat Fayzullin <luarvique@gmail.com>  Sat, 4 Mar 2023 16:12:00 +0000
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 4 Apr 2023 16:12:00 +0000
 
 pycsdr (0.18.5) bullseye jammy; urgency=low
 
   * Added SSTV decoder.
 
- -- Marat Fayzullin <luarvique@gmail.com>  Sat, 18 Feb 2023 16:12:00 +0000
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 18 Mar 2023 16:12:00 +0000
 
 pycsdr (0.18.4) bullseye jammy; urgency=low
 
