--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.11) bullseye jammy; urgency=low
+
+  * Synchronizing with csdr 0.18.11.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 17 Jun 2023 16:12:00 +0000
+
 pycsdr (0.18.10) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.10.
