--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pycsdr (0.18.12) bullseye jammy; urgency=low
+
+  * Synchronizing with csdr 0.18.12.
+  * Merged changes from Jakob Ketterl's original development branch.
+  * Added Exec, Baudot, Noise, new DcBlock modules from Jakob.
+  * The original LibCSDR gone, replaced with the former LibCSDR++.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Tue, 29 Jun 2023 16:12:00 +0000
+
 pycsdr (0.18.11) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.11.
