Preparing for the next release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pycsdr (0.18.14) bullseye jammy; urgency=low
+
+  * Synchronizing with csdr 0.18.14.
+  * Added Jakob's RTTY decoder and made it the default.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 16 Sep 2023 16:12:00 +0000
+
 pycsdr (0.18.13) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.13.
