Preparing for the 0.18.15 release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.15) bullseye jammy; urgency=low
+
+  * Incrementing library version to match original PyCSDR 0.18.12.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Thu, 12 Oct 2023 16:12:00 +0000
+
 pycsdr (0.18.14) bullseye jammy; urgency=low
 
   * Synchronizing with csdr 0.18.14.
