Preparing for the next release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pycsdr (0.18.22) bullseye jammy; urgency=low
+
+  * Improved preamble detection in CCIR493.
+  * Relaxed DSC FORMAT/EOS field requirements.
+  * Clarified DSC error positions.
+  * Slightly improved SITOR-B.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 25 Mar 2024 16:12:00 +0000
+
 pycsdr (0.18.21) bullseye jammy; urgency=low
 
   * Added doNotKill option to ExecModule.
