--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pycsdr (0.18.23) bullseye jammy; urgency=low
+
+  * Added NAVTEX decoder (header/footer detection).
+  * Cleaned up and greatly improved CW decoder.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Apr 2024 16:12:00 +0000
+
 pycsdr (0.18.22) bullseye jammy; urgency=low
 
   * Improved preamble detection in CCIR493.
