--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.24) bullseye jammy; urgency=low
+
+  * [jketterl] Added Throttle module.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Jul 2024 16:12:00 +0000
+
 pycsdr (0.18.23) bullseye jammy; urgency=low
 
   * Added NAVTEX decoder (header/footer detection).
