Preparing for the next release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pycsdr (0.18.25) bullseye jammy; urgency=low
+
+  * Syncing versions with the latest CSDR.
+  * Added PD50, PD90, PD120, PD160, PD180, PD240 SSTV modes.
+  * Added Wraase SC2-30, SC2-60, SC2-120 SSTV modes.
+  * Added AVT-90 SSTV mode.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 7 Oct 2024 16:12:00 +0000
+
 pycsdr (0.18.24) bullseye jammy; urgency=low
 
   * [jketterl] Added Throttle module.
