--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ pycsdr (0.18.25) bullseye jammy; urgency=low
   * Syncing versions with the latest CSDR.
   * Added PD50, PD90, PD120, PD160, PD180, PD240 SSTV modes.
   * Added Wraase SC2-30, SC2-60, SC2-120 SSTV modes.
+  * Added Scottie 3 and Scottie 4 SSTV modes.
+  * Added Martin 3 and Martin 4 SSTV modes.
   * Added AVT-90 SSTV mode.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Mon, 7 Oct 2024 16:12:00 +0000
