--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pycsdr (0.18.26) bullseye jammy; urgency=low
+
+  * Syncing versions with the latest CSDR.
+  * Fixed pixel window in PD120 and other modes.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 14 Oct 2024 16:12:00 +0000
+
 pycsdr (0.18.25) bullseye jammy; urgency=low
 
   * Syncing versions with the latest CSDR.
