--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pycsdr (0.18.28) bullseye jammy; urgency=low
+
+  * Syncing versions with the latest CSDR.
+  * Added configurable fax page limit.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Fri, 14 Mar 2025 16:12:00 +0000
+
 pycsdr (0.18.27) bullseye jammy; urgency=low
 
   * Syncing versions with the latest CSDR.
