--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pycsdr (0.18.29) bullseye jammy; urgency=low
+
+  * Syncing versions with the latest CSDR.
+  * Added end-of-page marke to fax pages.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Tue, 8 Apr 2025 16:12:00 +0000
+
 pycsdr (0.18.28) bullseye jammy; urgency=low
 
   * Syncing versions with the latest CSDR.
