--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycsdr (0.18.31) bullseye jammy; urgency=low
+
+  * Added LAGGY AGC option.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Tue, 20 May 2025 16:12:00 +0000
+
 pycsdr (0.18.30) bullseye jammy; urgency=low
 
   * Syncing versions with the latest CSDR.
