Preparing for the next release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pycsdr (0.18.35) bullseye jammy; urgency=low
+
+  * Syncing versions with the latest CSDR.
+  * Refactored AGC to avoid clipping.
+  * Refactored NoiseFilter to fix clicks.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 11 Aug 2025 16:12:00 +0000
+
 pycsdr (0.18.34) bullseye jammy; urgency=low
 
   * Further NoiseFilter improvements.
